# Ruzino-Homework

./: .gitmodules  CMakeLists.txt  README.md  configure.py  requirements.txt  test_cg_solver.ps1
.github/workflows/: build.yml
cmake/: AddLibrary.cmake  AddNodes.cmake
cmake/macros/: Private.cmake
prompts/: test_instructions.md
source/Core/: CMakeLists.txt
source/Core/RHI/: CMakeLists.txt
source/Core/RHI/include/RHI/: api.h
source/Core/RHI/include/RHI/ResourceManager/: resource_allocator.hpp
source/Core/RHI/include/RHI/ShaderFactory/: shader.hpp  shader_reflection.hpp  vector_map.hpp
source/Core/RHI/include/RHI/internal/: cuda_extension.hpp  nvrhi_equality.hpp  nvrhi_hash.hpp  resources.hpp
source/Core/RHI/python/: rhi.cpp
source/Core/RHI/source/: cuda_extension.cpp  cuda_extension.cu  rhi.cpp  shader.cpp  shader_reflection.cpp
source/Core/RHI/tests/: cuda_eigen.cu
source/Core/Solver/: CMakeLists.txt
source/Core/rzfembem/: CMakeLists.txt
source/Core/rzsim/: CMakeLists.txt
source/Core/rzsim/geometry_nodes/: CMakeLists.txt  bss_deducer.cpp  deducer.py  mass_spring.cpp  mass_spring_implicit.cpp  mass_spring_implicit_gpu.cpp  neo_hookean.md  neo_hookean_gpu.cpp  nn_boundary_detector.cpp  node_reduced_basis.cpp  reduced_order_neo_hookean_gpu.cpp  shape_space_geometry_gen.cpp
source/Core/rzsim/include/rzsim/: reduced_order_basis.h
source/Core/rzsim/rzsim_cuda/: CMakeLists.txt
source/Core/rzsim/rzsim_cuda/include/rzsim_cuda/: adjacency_map.cuh  mass_spring_implicit.cuh  neo_hookean.cuh
source/Core/rzsim/rzsim_cuda/src/: adjacency_map.cu  mass_spring_impl_simple.txt  mass_spring_implicit.cu  neo_hookean.cu
source/Core/rzsim/src/: reduced_order_basis.cpp  rzsim.cpp
source/Core/rzsim/tests/: adjacency_map.cpp  reduced_basis.cpp
source/Editor/geometry/: CMakeLists.txt  GOP.cpp  util_openmesh_bind.cpp
source/Editor/geometry_nodes/: CMakeLists.txt  GPU_sph.cpp  geom_prop_convert.cpp  hw5_boundary_map.cpp  hw5_param.cpp  node_arap_energy.cpp  node_create_geom.cpp  node_curvature.cpp  node_delaunay.cpp  node_dirichlet_energy.cpp  node_extract_areas.cpp  (+9 more)
source/Runtime/: CMakeLists.txt
submissions/assignments/: CMakeLists.txt
tests/application/: CMakeLists.txt  Ruzino.cpp  USTC_CG.cpp  USTC_CG_polyscope.cpp  clear_time_samples.cpp  headless_render.cpp  rz_render.cpp  rz_simulate.cpp
tests/renderer/: hd_USTC_CG.cpp
(+235 files in other folders)
